tests/NormalTests/paczka1/fuzzy1/10292080.err
Error in line 7: lxiHTv A729 42,9
Error in line 12: QwxEYF A597 33,28
Error in line 9: tG1z5btsFUJ S382 70,3
Error in line 14: lxiHTv S9 65,8
Error in line 20: lxiHTv S3v2 31,2
Error in line 26: DpOXe S9 1,1
Error in line 27: tG1z5btsFUJ S382 98,2
Error in line 19: lxiHTv A729 87,3
